fews2board/static/css/chart-style.css
.highcharts-color-0 {
	fill: #A6BFE2;
	stroke: #A6BFE2;
}

.highcharts-color-1 {
	fill: #AED581;
	stroke: #AED581;
}

.highcharts-color-2 {
	fill: #D6A79A;
	stroke: #D6A79A;
}

.highcharts-color-3 {
	fill: #8CA252;
	stroke: #8CA252;
}

.highcharts-color-4 {
	fill: #DBBEE0;
	stroke: #DBBEE0;
}

.highcharts-color-5 {
	fill: #E7CB94;
	stroke: #E7CB94;
}

.highcharts-color-6 {
	fill: #FFF59D;
	stroke: #FFF59D;
}

.highcharts-background {
	fill: #4A5975;
}

.highcharts-title {
	font-family: "Montserrat", "Segoe UI", "Helvetica", sans-serif;
	font-weight: 600;
	font-size: 16px;
	fill: #ffffff;
}

.highcharts-subtitle {
	font-family: "Segoe UI", "Open Sans", sans-serif;
	font-weight: bold;
	font-size: 18px;
	color: #3A454C;
}

.highcharts-axis-title {
	font-family: "Segoe UI", "Open Sans", sans-serif;
	font-weight: bold;
	font-size: 16px;
	color: #212721;
}

.highcharts-axis-labels {
	font-family: "Montserrat", "Segoe UI", "Open Sans", sans-serif;
	font-weight: normal;
	font-size: 14px;
	fill: #ffffff;
}

.highcharts-legend-item text {
	fill: #ffffff;
	font-weight: normal;
}

.highcharts-axis-line {
	stroke: #6F7B90;
}

.highcharts-grid-line {
	stroke: #6F7B90;
}

.highcharts-point {
	stroke-width: 0px;
}

.highcharts-tick {
	stroke-width: 0px;
	stroke: #808080;
}

.highcharts-data-label text {
	fill: #000000;
}

.highcharts-graph {
	stroke-width: 3px;
}

.tp-table {
	border-collapse: collapse;
	color: #ffffff;
	font-family: "Montserrat", "Segoe UI", "Helvetica", "Arial", sans-serif;
	padding-left: 8px;
	padding-right: 8px;
	width: 100%;
	overflow-y: auto;
	/* scrollbar-width: none; */
}

.tp-table caption {
	font-size: 16px;
	font-weight: 600;
	padding-top: 3px;
	text-align: left;
	color: white;
	caption-side: top;
}

.tp-table td {
	padding: 5px 5px 5px 15px;
}

.tp-table th {
	padding: 20px 0px 10px 15px;
	text-align: left;
}

.tp-table tr {
	border-bottom: 1px solid #A5ACBA;
}

.table-card {
	background-color: #4A5975;
	border-radius: 5px;
	/* padding: 10px 10px; */
	overflow-y: scroll;
	height: 100%;
	
	/* max-height: 500px; */
	/* width: 400px;
	height: 300px; */
}

path.ssi-column:nth-child(1) {
	fill: #D1D3D4;
}

path.ssi-column:nth-child(2) {
	fill: #7C888D;
}

.highcharts-data-label text {
	fill: #000000;
}

.highcharts-map .highcharts-background {
	fill: rgb(188, 218, 233);
}

.highcharts-map .highcharts-point {
	stroke: rgb(96, 104, 110);
}

.highcharts-map .highcharts-null-point {
	fill: rgb(209, 211, 212) !important;

}

.customChart {
	align-items: center;
	align-content: center;
}
 
.widget-title, .mc-card, .card-separator, .tg-card {
	color: white;
}

